<resources>
    <string name="app_name">Litmus\'17</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_first">Call For volunteers</string>
    <string name="title_activity_comingsoon">Comingsoon</string>
    <string name="title_activity_mainpage">Litmus17</string>
    <string name="action_share">Share</string>
    <string name="link">https://play.google.com/store/apps/details?id=itmvu.litmus17</string>
    <string name="frwd">Share this app through</string>
    <string name="title_activity_events">Events Details</string>
    <string name="title_activity_register">Register Your Self</string>
    <string name="title_activity_t1">Fury of Tracks</string>
    <string name="t1des">Design the fastest and the shrewdest car and put on your set-belts to facFe a white-knuckling race through the roughest arena! From the makers of \‘LITMUS\’, here\’s another thrilling real time all-terrain racing competition! Let\’s put your car-designing abilities and your car\’s, the strength, power and efficiency off to test.\n\nIt’s the fury of tracks for the roaring cars. We present you the <b>AUTOMOPHILES</b> for your very own creation.</string>
    <string name="t1rules">A.Team Size: Max. 4 persons \n\nB.The competition is only for autonomous robots (remotely controlled), no manual robot will be permitted to enter. The robot can be powered  are electrically only.\n\nC.The electric voltage between 2 points anywhere in the robot should not be more than 20 V DC at any point of time. \n\nD.All efforts must be made to protect battery terminals from a direct short and causing a battery fire, failure to do so will cause direct disqualification.\n\nE.Use of damaged, non-leak proof batteries may lead to disqualification. \n\nF.change of battery will not be allowed during the match.\n\nG.A robot is declared victorious with the least time.\n\nH.Only 1 checkpoint skip (time + 30sec) and 3 hand touch are allowed. \n\nI.Track width will be 20 cm.</string>
    <string name="title_activity_t2">Code To Win</string>
    <string name="t2rules">A.Each team should have two members.\n\nB. There will be 2 rounds, one easy and another one little typical.\n\nC. There should not be any use of unfair means, if this happens then the team will be disqualified.\n\nD. Winners will be decided on the basis of time taken in making up with the assigned tasks.</string>
    <string name="t2desp">It\’s time to step out of your comfort zone. This event is going to be a test of your coding skill, under pressure.\n\nRun your brain and your fingers simultaneously.\n\n \“Most good programmers do programming not because they expect to get paid or get adulation by the public, but because it is fun to program.\”\n\n– Linus Torvalds (Finnish American, software engineer and hacker, principal force behind the development of the Linux kernel)</string>
    <string name="title_activity_t3">FIERY FIGHTERS</string>
    <string name="t3desp">\“Let the metal do the talking\”\n\nPassionate about Bots? Or you just like to watch things get crushed from fierce competition? The path to glory passes through the alley of destruction, lethal combats, violent bots, and flying blades! Merge your technical know-how with the ferocious gladiator in you! Make your bot fight for the ultimate glory or land up in the junk yard!\n\nFight smart, be patient\n\nLet your Robo\’s prove themselves to be the most powerful and reliable warriors!\n\nLet them make the havoc in their enemy\’s town. See you in the arena</string>
    <string name="t3rules">A.Team Size: Max. 4 persons \n\nB.Two ROBOTs compete in a head-to-head match following the basics of wrestling.\n\nC.ROBOTs should be wireless or wired remote controlled. \n\nD.Like wrestling, the ROBOTs are given three full minutes for a round, in which either one of the ROBOTs is knocked out or the match time runs out, and judges decide the winner.\n\nE.The ROBOT should fit in a box of dimensions 400mm*400mm*400mm excluding the external control device dimensions.\n\nF.The weight limit of the ROBOT is 20 kg maximum including battery  Grabbing and throwing mechanism is allowed.\n\nG.The robot will be disqualified if any parts fail &amp;fall off in the arena and is unable to move for 10 seconds.\n\nH.The team destroying the opponents wiring circuitry intentionally or even by mistake  during the time of war will be disqualified.\n\nI.The decision of the Core Committee will be considered final and indisputable.\n\nJ.The Core Committee has the right to change any of the rules at any time.\n\nK.If the machine remains immobile for respectable time then on the spot decision will be taken by the Core Committee.</string>
    <string name="title_activity_t4">SPEEDING MACHINES</string>
    <string name="t4desp">Strength isn\’t everything, are you fast enough?\n\nWhen you think you know it all, it\’s sure a sign you don’t. There is no place for arrogance and complacency in racing because you are up there one minute and on your backside the next. So all you ingenious engineers-to-be out there have an opportunity to Muster here and not only witness, but also be a part of the exhibit of sheer efficacy of brilliance. \n\n Fasten your wheels and just smash the finish line before any other of your clone.\n\n</string>
    <string name="t4rules">A. Team Size: Max. 4 persons.\n\nB. The track consists of different hurdle, which makes it difficult for a normal ROBOT to successfully cross them. \n\nC. Thus it requires a composite capability of having optimum speed and the torque to be a winner in a specifically given time duration. \n\nD. The ROBOT also requires the proper steering mechanism which will be able to pass through the curves.\n\nE. The ROBOT dimensions should not exceed 200*200*200 mm excluding the control device dimensions.\n\nF. The weight limit of the ROBOT is 6 kg maximum including battery and 4 kg excluding.\n\nG. The ROBOT may use wireless remote. Readymade wireless remote control units may be used.\n\nH. Maximum voltage between any two points on the ROBOT must not exceed 20 V dc. any dimension according to the ROBOT.</string>
    <string name="title_activity_t5">FLYING WARRIORS</string>
    <string name="t5desp">Let your sky dazzle the heads, around the event.\n\nThe beat skipping copter competition is fetched to you by LITMUS conjured by the hypnotic city weather and energetic roaring crowd. When the propellers call to complain of their dormancy there is no such thing left which can be called as defeat.\n\n Hover your talent and beat the air. Release them and enjoy the mayhem!!\n\n Design and make a wireless remote controlled flying platform to complete obstacle course without crash in minimum time.\n\n Consisting of loops, bends, underpass, overpass and secret paths placed in random sequence along an aerial track. \n\n</string>
    <string name="t5rules">A.Participant must arrive at the event before 30mins.\n\nB.Flight time for a run is defined as the time taken by the drone to follow the mentioned path.\n\nC.A maximum time of 5 minutes from set up to exit from Arena will be given to complete the circuit.\n\nD.The drone has to be kept on the start zone in the starting itself.\n\nE.The timer will start from the moment the countdown finish.\n\nF.The timer will stop only when the drone finally comes to Start zone.\n\nG.Battery voltage should not exceed 3.7 v, and the construction of the copter won’t exceed the size of 40x40(cm). </string>
    <string name="title_activity_t6">Construo</string>
    <string name="t6desp">So it\’s finally the time for some fun and crazy team work\n\nHave you been an artistic and a working mind, do you think you can come up with anything if you are given on newspaper, do you think you can work in team?!!\n\nThen come on mates, it\’s time to build your very own scraper from the scrap, because here the waste paper can make you some worthy stuff.\n\nSo enrol have fun, because you have nothing to waste!\n\nBe a construo warrior….\n\n</string>
    <string name="t6rules">A.a maximum of team of 4 will be allowed. \n\nB.The team will be provided with the limited material for making their own paper tower.\n\nC.Their will be a limited time to complete with your tower. </string>
    <string name="title_activity_t7">Bridge The Gap</string>
    <string name="t7desp">Across gulfs and rivers, between people and countries, bridges break down separation and foster connectedness.\n\n The world has gone at its heights to reach the sky. Your problem here is to bridge the gap which exists between where you are now and the goal you intend to reach. So do it with closed minds though careful dissection of ideas and solid presentation of fact. Here is your chance to build structures with your own techniques and skills and make the marvels of engineering!! \n\n </string>
    <string name="t7rules">A.Each team should be of maximum 4 members.\n\nB. Materials to be used: Popsicle sticks, Fevicol , Hard board, thread.\n\nC. Use of any other adhesive, etc. is prohibited and participants using it will be disqualified from the event.\n\nD. All the models must be taken for the self-weighing during the specified period of time (any entry after that won’t be accepted and would be disqualified).\n\nE. No changes in the model after the self-weighing would be allowed and any team doing so without the permission of the core committee member would be disqualified.\n\nF. The decision of the judges and core committee will be final regarding any discrepancy on the spot or before the event.</string>
    <string name="title_activity_t8">Shift To Beat</string>
    <string name="title_activity_m1">PAINT YOUR IMAGINATION</string>
    <string name="m1desp">Face Painting\n\nGlass Painting\n\nT-Shirt Painting\n\nFlowerpot Painting\n\nGraffiti\n\nIt\’s time to let your imagination run wild and be creative. Paint face, glass, t-shirt, flowerpot or do Grafity(Wall Paint). Bring your imagination to reality and turn the world into your very own canvas.\n\n</string>
    <string name="title_activity_m2">Documentary Film</string>
    <string name="m2desp">Grab your camera and start filming.\n\nYou can film yourself or someone else , you can film anywhere around you, film your home ,your work, your family and friends.\n\nTheme: \n\n •	Smoking kills/ ill effect of chewing tobacco \n\n• Pollution\n\n• Population\n\n• Female securities\n\n• Indian political system\n\n• Corruption\n\n</string>
    <string name="title_activity_m3">Treasure Hunt</string>
    <string name="m3desp">Let your inner Indiana jones come out to go on a exciting hunt for treasure. Get ready for mind boggling riddles and puzzle. If you seek a fun-filled team building activity, you’re at right place.</string>
    <string name="title_activity_m4">" AD-Selfie"</string>
    <string name="m4desp">\“Self-Serve Advertisement\” \n\nAD Selfie is a self-portrait photograph, typically taken with a digital camera or camera phone held in the hand or supported by a Selfie stick with a product and self-framed tagline. Grew your imagination by being Brand Ambassador of any product and add tagline to your product.</string>
    <string name="title_activity_m5">BIZTECH</string>
    <string name="m5desp">Quiz based on business news, technology news, basic to high level concepts of management and engineering, identify companies by logo and taglines, based on sports, bollywood and general knowledge</string>
    <string name="title_activity_m6">WRIST WRESTLING</string>
    <string name="m6desp">Various factors can play a part in one\'s success in arm wrestling. Technique and overall arm strength are the two greatest contributing factors to winning an arm wrestling match.</string>
<string name="title_activity_m7">Fun Race</string>
    <string name="m7desp">Fun race is an event in which contestants run in a pair, through a set of course, tackling obstacles.</string>
</resources>