<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp">



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="16dp"
            android:clickable="true"
            android:onClick="m1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#3b5999"
                android:layout_weight="3"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="P"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary"

                    android:fontFamily="sans-serif-light"
                    android:textSize="40sp" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:padding="4dp"
                    android:text="@string/title_activity_m1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:singleLine="true"
                    android:text="@string/m1desp"/>

            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:clickable="true"
                android:onClick="m2"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#d50000"
                    android:layout_weight="3"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="D"
                        android:gravity="center"
                        android:textColor="@color/textColorPrimary"

                        android:fontFamily="sans-serif-light"
                        android:textSize="40sp" />

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:padding="4dp"
                        android:text="@string/title_activity_m2"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:singleLine="true"
                        android:text="@string/m2desp"/>

                </LinearLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:clickable="true"
                android:onClick="m3"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#09b83e"
                    android:layout_weight="3"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="T"
                        android:gravity="center"
                        android:textColor="@color/textColorPrimary"

                        android:fontFamily="sans-serif-light"
                        android:textSize="40sp"/>

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:padding="4dp"
                        android:text="@string/title_activity_m3"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:singleLine="true"
                        android:text="@string/m3desp"/>

                </LinearLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:clickable="true"
                android:onClick="m4"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#410093"
                    android:layout_weight="3"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="A"
                        android:gravity="center"
                        android:textColor="@color/textColorPrimary"

                        android:fontFamily="sans-serif-light"
                        android:textSize="40sp"/>

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:padding="4dp"
                        android:text="@string/title_activity_m4"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:singleLine="true"
                        android:text="@string/m4desp"/>

                </LinearLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:clickable="true"
                android:onClick="m5"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#FFCA28"
                    android:layout_weight="3"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="B"
                        android:gravity="center"
                        android:textColor="@color/textColorPrimary"

                        android:fontFamily="sans-serif-light"
                        android:textSize="40sp"/>

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:padding="4dp"
                        android:text="@string/title_activity_m5"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:singleLine="true"
                        android:text="@string/m5desp"/>

                </LinearLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:clickable="true"
                android:onClick="m6"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#3aaf85"
                    android:layout_weight="3"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="W"
                        android:gravity="center"
                        android:textColor="@color/textColorPrimary"

                        android:fontFamily="sans-serif-light"
                        android:textSize="40sp"/>

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:padding="4dp"
                        android:text="@string/title_activity_m6"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:singleLine="true"
                        android:text="@string/m6desp"/>

                </LinearLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:clickable="true"
                android:onClick="m7"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#bd081c"
                    android:layout_weight="3"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="F"
                        android:gravity="center"
                        android:textColor="@color/textColorPrimary"

                        android:fontFamily="sans-serif-light"
                        android:textSize="40sp"/>

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:padding="4dp"
                        android:text="@string/title_activity_m7"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:singleLine="true"
                        android:text="@string/m7desp"/>

                </LinearLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>






    </LinearLayout>

</android.support.v4.widget.NestedScrollView>